[package]
name = "dahl-bellnumber"
version = "0.1.0"
authors = ["David B. Dahl <dahl@stat.byu.edu>"]
edition = "2018"
description = "In combinatorial mathematics, the Bell numbers count the possible partitions of a set.  https://en.wikipedia.org/wiki/Bell_number"
homepage = "https://dahl.byu.edu"
license = "MIT OR Apache-2.0"

[dependencies]
num-bigint = "0.2.2"
num-traits = "0.2.8"
approx = "0.3.2"
