[package]
name = "dahl-bellnumber"
version = "0.1.1"
authors = ["David B. Dahl <dahl@stat.byu.edu>"]
edition = "2021"
description = "In combinatorial mathematics, the Bell numbers count the possible partitions of a set.  https://en.wikipedia.org/wiki/Bell_number"
homepage = "https://dahl.byu.edu"
license = "MIT OR Apache-2.0"

[dependencies]
num-bigint = "0.4.0"
num-rational = "0.4.0"
num-traits = "0.2.14"
approx = "0.4.0"
